# fipnow

./: .gitignore  CMakeLists.txt  LICENSE  Main.hs  README.md  default.nix  fipnow.cabal  fipnow.cpp
haskell/: fipnow.cabal
